--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta property="og:title" content="우하하" />
+        <meta property="og:title" content="우하하" />https://github.com/itsmesemi/mypage/blob/main/index.html
         <meta property="og:description" content="스파루타로 해봤습니다." />
         <meta property="og:image" content="공유할 이미지" />
         <title>세미</title>
@@ -24,7 +24,7 @@
                 width: 100px;
                 height: 100px;
 
-                border-radius: 100%미
+                border-radius: 100%;
                 border: 2px solid darkgray;
 
                 background-image: url('profile.jpg');
